# type-theory

./: Cargo.toml  README.md
examples/: code.λ  end-to-end.rs
src/: ast.rs  conversion.rs  display.rs  lib.rs  parser.lalrpop  w.rs
